--- a/config/plugins.yaml
+++ b/config/plugins.yaml
@@ -8,7 +8,7 @@
 - repo: Shougo/dein.vim
 - repo: thinca/vim-localrc
 - repo: Shougo/context_filetype.vim
-- repo: jaawerth/nrun.vim
+
 - { repo: rafi/awesome-vim-colorschemes, merged: 0 }
 
 - repo: sgur/vim-editorconfig
@@ -32,9 +32,6 @@
 - repo: tpope/vim-sleuth
   hook_add: let g:sleuth_neighbor_limit = 5
 
-# GUI only:
-- { repo: equalsraf/neovim-gui-shim, if: has('gui_running') }
-
 # Vim8 only:
 - { repo: roxma/nvim-yarp, if: "! has('nvim')", depends: vim-hug-neovim-rpc }
 - { repo: roxma/vim-hug-neovim-rpc, if: "! has('nvim')" }
@@ -48,9 +45,11 @@
 - { repo: othree/csscomplete.vim, on_ft: css }
 - { repo: cakebaker/scss-syntax.vim, on_ft: [ scss, sass ]}
 - { repo: groenewege/vim-less, on_ft: less }
-- { repo: iloginow/vim-stylus, on_ft: stylus }  # or wavded/vim-stylus ?
 - { repo: mustache/vim-mustache-handlebars, on_ft: [html, mustache, handlebars]}
-- { repo: digitaltoad/vim-pug, on_ft: [ pug, jade ]}
+- repo: nvim-treesitter/nvim-treesitter 
+  hook_source: source $VIM_PATH/config/plugins/treesitter.vim
+
+- { repo: bluz71/vim-moonfly-colors }
 
 - repo: othree/html5.vim
   on_ft: html
@@ -99,20 +98,11 @@
   depends: vim-javascript
   hook_add: let g:vim_jsx_pretty_colorful_config = 1
 
-- { repo: leafOfTree/vim-svelte-plugin, depends: yats.vim, on_ft: svelte }
 - { repo: heavenshell/vim-jsdoc, on_ft: [ javascript, javascriptreact ] }
-- { repo: jparise/vim-graphql, on_ft: [ javascript, javascriptreact ] }
 - { repo: moll/vim-node, on_ft: [ javascript, javascriptreact ] }
 - { repo: kchmck/vim-coffee-script, on_ft: [ coffee, litcoffee ] }
 - { repo: elzr/vim-json, on_ft: json }
 - { repo: posva/vim-vue, on_ft: vue }
-
-# pangloss/javascript vs. othree/yajs
-#- { repo: othree/yajs.vim, on_ft: [ javascript, javascriptreact ]}
-#- { repo: gavocanov/vim-js-indent, on_ft: [ javascript, javascriptreact ]}
-#- repo: mxw/vim-jsx
-#  on_ft: [ javascript, javascriptreact ]
-#  hook_add: let g:jsx_ext_required = 0
 
 # Python related
 - { repo: vim-python/python-syntax, on_ft: python }
@@ -133,32 +123,6 @@
 - { repo: tmux-plugins/vim-tmux, on_ft: tmux }
 - { repo: MTDL9/vim-log-highlighting, on_ft: log }
 - { repo: cespare/vim-toml, on_ft: toml }
-- { repo: mboughaba/i3config.vim, on_ft: i3config }
-- { repo: dag/vim-fish, on_ft: fish }
-- { repo: jstrater/mpvim, on_ft: portfile }
-- { repo: robbles/logstash.vim, on_ft: logstash }
-- { repo: lifepillar/pgsql.vim, on_ft: pgsql }
-- { repo: chr4/nginx.vim, on_ft: nginx }
-- { repo: towolf/vim-helm, on_ft: helm }
-- { repo: udalov/kotlin-vim, on_ft: kotlin }
-- { repo: reasonml-editor/vim-reason-plus, on_ft: [ reason, merlin ] }
-
-- repo: pearofducks/ansible-vim
-  on_ft: [ ansible, ansible_hosts, jinja2 ]
-  hook_add: |-
-    let g:ansible_extra_keywords_highlight = 1
-    let g:ansible_template_syntaxes = {
-      \   '*.json.j2': 'json',
-      \   '*.(ba)?sh.j2': 'sh',
-      \   '*.ya?ml.j2': 'yaml',
-      \   '*.xml.j2': 'xml',
-      \   '*.conf.j2': 'conf',
-      \   '*.ini.j2': 'ini'
-      \ }
-
-- repo: hashivim/vim-terraform
-  on_ft: terraform
-  on_cmd: [ Terraform, TerraformFmt ]
 
 # ==========================================
 # Commands
@@ -178,7 +142,6 @@
 - { repo: kana/vim-altr, on_map: { n: <Plug> }}
 - { repo: Shougo/vinarise.vim, on_cmd: Vinarise }
 - { repo: guns/xterm-color-table.vim, on_cmd: XtermColorTable }
-- { repo: cocopon/colorswatch.vim, on_cmd: ColorSwatchGenerate }
 - { repo: dstein64/vim-startuptime, on_cmd: StartupTime }
 - { repo: lambdalisue/suda.vim, on_event: BufRead }
 
@@ -188,8 +151,6 @@
   hook_source: source $VIM_PATH/config/plugins/gina.vim
 
 - repo: mhinz/vim-grepper
-  on_map: { nx: <Plug> }
-  on_cmd: Grepper
   hook_add: |-
     let g:grepper = {
         \ 'tools': ['rg', 'git', 'fd'],
@@ -198,17 +159,6 @@
         \   'grepformat': '%f',
         \   'escape':     '\+*^$()[]',
         \ }}
-
-- repo: brooth/far.vim
-  on_cmd: [ Far, Farp, F ]
-  hook_source: |-
-    if executable('rg')
-      let g:far#source = 'rg'
-    elseif executable('ag')
-      let g:far#source = 'ag'
-    elseif executable('ack')
-      let g:far#source = 'ack'
-    endif
 
 - repo: pechorin/any-jump.vim
   on_cmd: [ AnyJump, AnyJumpVisual ]
@@ -254,7 +204,6 @@
     let g:vista_echo_cursor_strategy = 'scroll'
     let g:vista_vimwiki_executive = 'markdown'
     let g:vista_executive_for = {
-      \ 'vimwiki': 'markdown',
       \ 'pandoc': 'markdown',
       \ 'markdown': 'toc',
       \ }
@@ -373,44 +322,12 @@
   on_event: BufReadPost
   hook_source: let g:committia_min_window_width = 70
 
-- repo: junegunn/goyo.vim
-  depends: limelight.vim
-  on_cmd: Goyo
-  hook_source: source $VIM_PATH/config/plugins/goyo.vim
-
 - repo: junegunn/limelight.vim
   on_cmd: Limelight
-
-- repo: itchyny/calendar.vim
-  on_cmd: Calendar
-  hook_source: |-
-    let g:calendar_google_calendar = 1
-    let g:calendar_google_task = 1
 
 - repo: deris/vim-shot-f
   on_map: { nxo: <Plug> }
   hook_add: let g:shot_f_no_default_key_mappings = 1
-
-- repo: vimwiki/vimwiki
-  on_map: { n: <Plug> }
-  on_cmd: [ VimwikiIndex, VimwikiUISelect ]
-  hook_add: |-
-    let g:vimwiki_use_calendar = 1
-    let g:vimwiki_hl_headers = 1
-    let g:vimwiki_hl_cb_checked = 1
-    let g:vimwiki_autowriteall = 0
-  hook_source: |-
-    let g:vimwiki_list = [
-    \   { 'diary_header': 'Diary',
-    \     'diary_link_fmt': '%Y-%m/%d',
-    \     'auto_toc': 1,
-    \     'path': '~/docs/wiki/',
-    \     'syntax': 'markdown',
-    \     'ext': '.md' },
-    \   { 'path': '~/docs/books/',
-    \     'syntax': 'markdown',
-    \     'ext': '.md' }
-    \ ]
 
 - repo: norcalli/nvim-colorizer.lua
   if: has('nvim-0.4')
@@ -499,8 +416,8 @@
       \ asyncomplete#sources#tags#get_source_options({
       \ 'name': 'tags',
       \ 'allowlist': ['*'],
-      \ 'blocklist': ['go', 'python', 'vim', 'denite',
-      \               'denite-filter', 'clap_input'],
+      \ 'blocklist': ['go', 'python', 'vim', 'denite', 'cpp', 'denite-filter',
+      \ 'clap_input'],
       \ 'completor': function('asyncomplete#sources#tags#completor'),
       \ 'config': { 'max_file_size': 5000000 },
       \ }))
