--- a/config/plugins.yaml
+++ b/config/plugins.yaml
@@ -9,7 +9,9 @@
 - repo: thinca/vim-localrc
 - repo: Shougo/context_filetype.vim
 
+# Themes and colors
 - { repo: rafi/awesome-vim-colorschemes, merged: 0 }
+- { repo: bluz71/vim-moonfly-colors }
 
 - repo: sgur/vim-editorconfig
   hook_add: |-
@@ -46,10 +48,10 @@
 - { repo: cakebaker/scss-syntax.vim, on_ft: [ scss, sass ]}
 - { repo: groenewege/vim-less, on_ft: less }
 - { repo: mustache/vim-mustache-handlebars, on_ft: [html, mustache, handlebars]}
+
 - repo: nvim-treesitter/nvim-treesitter 
   hook_source: source $VIM_PATH/config/plugins/treesitter.vim
 
-- { repo: bluz71/vim-moonfly-colors }
 
 - repo: othree/html5.vim
   on_ft: html
@@ -133,7 +135,6 @@
 
 - { repo: kristijanhusak/defx-git, on_source: defx.nvim }
 - { repo: kristijanhusak/defx-icons, on_source: defx.nvim }
-
 - { repo: tyru/caw.vim, on_map: { nx: <Plug> }}
 - { repo: lambdalisue/fin.vim, on_cmd: Fin }
 - { repo: mbbill/undotree, on_cmd: UndotreeToggle }
@@ -144,6 +145,12 @@
 - { repo: guns/xterm-color-table.vim, on_cmd: XtermColorTable }
 - { repo: dstein64/vim-startuptime, on_cmd: StartupTime }
 - { repo: lambdalisue/suda.vim, on_event: BufRead }
+- repo: justinmk/vim-sneak
+  hook_add: |-
+    map - <plug>Sneak_s
+    map _ <plug>Sneak_S
+    map gn <plug>Sneak_;
+    map gN <plug>Sneak_,
 
 - repo: lambdalisue/gina.vim
   on_cmd: Gina
@@ -166,23 +173,9 @@
     let g:any_jump_disable_default_keybindings = 1
     autocmd user_events FileType any-jump setlocal cursorline
 
-- repo: Vigemus/iron.nvim
-  if: has('nvim')
-  on_cmd: [ IronRepl, IronReplHere, IronFocus, IronSend, IronWatchCurrentFile ]
-  on_map: { nv: <Plug> }
-  on_func: IronUnwatchFile
-  hook_add: let g:iron_map_defaults = 0 | let g:iron_map_extended = 0
-  hook_source: luafile $VIM_PATH/config/plugins/iron.lua
-
 - repo: kana/vim-niceblock
   on_map: { x: <Plug> }
   hook_add: let g:niceblock_no_default_key_mappings = 0
-
-- repo: t9md/vim-choosewin
-  on_map: { n: <Plug> }
-  hook_add: |-
-    let g:choosewin_label = 'ADFGHJKLUIOPQWERT'
-    let g:choosewin_label_padding = 5
 
 - repo: wfxr/minimap.vim
   on_cmd: [ Minimap, MinimapToggle ]
@@ -321,9 +314,6 @@
 - repo: rhysd/committia.vim
   on_event: BufReadPost
   hook_source: let g:committia_min_window_width = 70
-
-- repo: junegunn/limelight.vim
-  on_cmd: Limelight
 
 - repo: deris/vim-shot-f
   on_map: { nxo: <Plug> }
@@ -544,7 +534,6 @@
     let g:unite_source_file_mru_limit = 5000
 
 - { repo: Shougo/neoyank.vim, on_source: denite.nvim, on_event: TextYankPost }
-- { repo: Shougo/junkfile.vim, on_source: denite.nvim }
 - { repo: chemzqm/unite-location, on_source: denite.nvim }
 - { repo: rafi/vim-denite-session, on_source: denite.nvim }
 
